# Event-Management-System

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  inventory.yml  pyproject.toml  ruff.toml  spot.yml  traefik.yml
.github/workflows/: pylint.yml  pytest.yml  ruff.yml
app/: container.py  main.py
app/api/: api_handler.py  events_router.py  feedbacks_router.py  healthcheck_router.py  registrations_router.py  users_router.py
app/auth/: attendee_access_controller.py  auth_router.py  auth_service.py  authorization_router.py  event_access_controller.py  organizer_access_controller.py
app/constants/: admin.py  event_tags.py  exceptions.py  notifications.py  roles.py  tags.py  types.py  user_roles.py
app/core/: events_service.py  feedbacks_service.py  registrations_service.py  users_service.py
app/database/: db.py
app/migrations/: env.py
app/notifications/: cron_service.py  email_service.py  sms_scheduler_service.py  sms_service.py
app/schemas/: event_schema.py  feedback_schema.py  refresh_schema.py  registration_schema.py  user_schema.py
app/services/: config_service.py  logger_service.py
app/sockets/: crypto_service.py  websocket_router.py  websocket_service.py
app/utils/: filter_service.py  hash_service.py  jwt_service.py  query_builder.py
deployment/: inventory.yml  spot.yml
frontend/: Dockerfile  index.html  script.js
scripts/: migration.sh
tests/: conftest.py  helper.py  test_events_service.py  test_registrations_service.py
tests/integration/: test_auth_router.py  test_registrations_router.py
tests/unit/: test_events_service.py  test_feedbacks_service.py  test_filter_service.py  test_hash_service.py  (+3 more)
(+17 files in other folders)
